--- a/3rd Eye/Base.lproj/Main.storyboard
+++ b/3rd Eye/Base.lproj/Main.storyboard
@@ -343,7 +343,7 @@
                                             </connections>
                                         </button>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="MgC-VY-Icr">
-                                            <rect key="frame" x="20" y="20" width="255" height="60"/>
+                                            <rect key="frame" x="20" y="20" width="255" height="360"/>
                                             <subviews>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k7R-XW-KkS">
                                                     <rect key="frame" x="0.0" y="0.0" width="255" height="60"/>
@@ -364,8 +364,8 @@
                                                         <action selector="changeUserMode:" destination="5zS-Rd-Xfs" eventType="touchUpInside" id="ZwX-1r-xkg"/>
                                                     </connections>
                                                 </button>
-                                                <button hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ehD-t5-CHI">
-                                                    <rect key="frame" x="0.0" y="-20" width="255" height="60"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ehD-t5-CHI">
+                                                    <rect key="frame" x="0.0" y="60" width="255" height="60"/>
                                                     <color key="backgroundColor" red="0.99727648499999999" green="0.49696779250000001" blue="0.32951986789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="yTJ-5R-X2p"/>
@@ -382,8 +382,8 @@
                                                         <action selector="modeSelected:" destination="5zS-Rd-Xfs" eventType="touchUpInside" id="3Eb-Py-zmc"/>
                                                     </connections>
                                                 </button>
-                                                <button hidden="YES" opaque="NO" alpha="0.0" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q4x-8O-sAO">
-                                                    <rect key="frame" x="0.0" y="-20" width="255" height="60"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q4x-8O-sAO">
+                                                    <rect key="frame" x="0.0" y="120" width="255" height="60"/>
                                                     <color key="backgroundColor" red="0.99727648499999999" green="0.49696779250000001" blue="0.32951986789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="60" id="KS4-uD-dAp"/>
@@ -398,6 +398,60 @@
                                                     </userDefinedRuntimeAttributes>
                                                     <connections>
                                                         <action selector="modeSelected:" destination="5zS-Rd-Xfs" eventType="touchUpInside" id="RLb-IW-Qx1"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mde-l1-1Xn">
+                                                    <rect key="frame" x="0.0" y="180" width="255" height="60"/>
+                                                    <color key="backgroundColor" red="0.99727648499999999" green="0.49696779250000001" blue="0.32951986789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="6eh-mr-Mau"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Inceptionv3">
+                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="modeSelected:" destination="5zS-Rd-Xfs" eventType="touchUpInside" id="bAa-DB-OYF"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XpG-2Q-ulG">
+                                                    <rect key="frame" x="0.0" y="240" width="255" height="60"/>
+                                                    <color key="backgroundColor" red="0.99727648499999999" green="0.49696779250000001" blue="0.32951986789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="JW6-p3-InX"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Resnet50">
+                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="modeSelected:" destination="5zS-Rd-Xfs" eventType="touchUpInside" id="xZl-dc-y5c"/>
+                                                    </connections>
+                                                </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0J-AU-p9M">
+                                                    <rect key="frame" x="0.0" y="300" width="255" height="60"/>
+                                                    <color key="backgroundColor" red="0.99727648499999999" green="0.49696779250000001" blue="0.32951986789999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="60" id="lnR-GR-mjr"/>
+                                                    </constraints>
+                                                    <state key="normal" title="VGG16">
+                                                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </state>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="30"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                    <connections>
+                                                        <action selector="modeSelected:" destination="5zS-Rd-Xfs" eventType="touchUpInside" id="SQ8-Ni-5hy"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -458,6 +512,9 @@
                         <outlet property="loadIndicator" destination="E7l-cX-Tsu" id="QN6-Yb-wXa"/>
                         <outletCollection property="modeButtons" destination="ehD-t5-CHI" collectionClass="NSMutableArray" id="Hxn-Sx-SED"/>
                         <outletCollection property="modeButtons" destination="Q4x-8O-sAO" collectionClass="NSMutableArray" id="0ya-cO-W9J"/>
+                        <outletCollection property="modeButtons" destination="mde-l1-1Xn" collectionClass="NSMutableArray" id="bEz-sQ-I3T"/>
+                        <outletCollection property="modeButtons" destination="XpG-2Q-ulG" collectionClass="NSMutableArray" id="eMF-Qg-PPt"/>
+                        <outletCollection property="modeButtons" destination="Y0J-AU-p9M" collectionClass="NSMutableArray" id="jGj-MX-TRY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RBl-c2-YaM" userLabel="First Responder" sceneMemberID="firstResponder"/>
